--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
 <body>
   <div class="container py-5">
+    <img id="logo-img" src="logo.png" alt="logo" class="mb-2">
     <form class="needs-validation" novalidate>
       <!-- DADOS PESSOAIS -->
-      <img id="logo-img" src="logo.png" alt="logo" class="mb-2">
       <div class="card mb-4">
         <div class="card-header bg-primary text-white">
           <strong>Dados do Parceiro</strong>
@@ -369,9 +369,9 @@
   <!-- <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script> -->
 
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
 
   <!-- Arquivo JS externo gerado: script.js -->
