--- a/index.html
+++ b/index.html
@@ -343,6 +343,21 @@
         </div>
       </div>
 
+      <!-- OBS -->
+      <div class="card mb-4">
+        <div class="card-header bg-primary text-white">
+          <strong>Observações</strong>
+        </div>
+        <div class="card-body">
+          <div class="mb-3">
+            <textarea name="" id="id-observacoes" class="form-control"></textarea>
+          </div>
+
+          <!-- CAMPOS DINÂMICOS -->
+          <div id="camposOperacao" class="row g-3"></div>
+        </div>
+      </div>
+
       <!-- BOTÃO -->
       <div class="text-center">
         <button type="submit" class="btn btn-primary px-5">Enviar</button>
