--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </div>
           <div class="col-md-1">
             <label class="form-label">UF</label>
-            <select id="id-uf-rg" class="form-select form-select-sm" required>
+            <select id="id-uf-rg" class="form-control form-control-sm" required>
               <option selected disabled>Selecione...</option>
               <option>AC</option>
               <option>AL</option>
@@ -127,7 +127,7 @@
           </div>
           <div class="col-md-1">
             <label class="form-label">UF</label>
-            <select id="id-uf-naturalidade" class="form-select form-select-sm" required>
+            <select id="id-uf-naturalidade" class="form-control form-control-sm" required>
               <option selected disabled>Selecione...</option>
               <option>AC</option>
               <option>AL</option>
@@ -190,7 +190,7 @@
           </div>
           <div class="col-md-1">
             <label class="form-label">UF</label>
-            <select id="uf-endereco" class="form-select form-select-sm" required>
+            <select id="uf-endereco" class="form-control form-control-sm" required>
               <option selected disabled>Selecione...</option>
               <option>AC</option>
               <option>AL</option>
@@ -257,7 +257,7 @@
           </div>
           <div class="col-md-1">
             <label class="form-label">UF</label>
-            <select id="uf-endereco" class="form-select form-select-sm" required>
+            <select id="uf-endereco" class="form-control form-control-sm" required>
               <option selected disabled>Selecione...</option>
               <option>AC</option>
               <option>AL</option>
@@ -307,7 +307,7 @@
           </div>
           <div class="col-md-3">
             <label class="form-label">Tipo</label>
-            <select id="tipo-conta" class="form-select form-select-sm">
+            <select id="tipo-conta" class="form-control form-control-sm">
               <option selected value="C/C">Corrente</option>
               <option value="C/P">Poupança</option>
             </select>
@@ -331,7 +331,7 @@
         <div class="card-body">
           <div class="mb-3">
             <label class="form-label">Selecione o Tipo de Operação</label>
-            <select class="form-select form-select-sm" id="tipoOperacao" required>
+            <select class="form-control form-control-sm" id="tipoOperacao" required>
               <option selected disabled>Selecione...</option>
               <option value="portabilidade">Portabilidade</option>
               <option value="margem">Margem</option>
@@ -396,5 +396,6 @@
 </body>
 
 </html>
+
 
 
