Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="card-body row g-3">
           <div class="col-md-2">
             <label class="form-label">ID Workbank</label>
-            <input type="text" maxlength="4" class="form-control form-control-sm">
+            <input type="text" maxlength="4" id="id-workbank" class="form-control form-control-sm" required>
           </div>
         </div>
       </div>
